--- a/LocalPizza/appsettings.json
+++ b/LocalPizza/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LocalPizza-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=pizza-db.ctxrmmyk7pss.us-east-1.rds.amazonaws.com;Database=pizza-db;User Id=admin;Password=SA4oanUnvnDtHadZg1B6;"
   },
   "Logging": {
     "LogLevel": {
