--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/LocalPizza/.vscode/tasks.json
+/LocalPizza/.vscode/launch.json
