--- a/LocalPizza/appsettings.json
+++ b/LocalPizza/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=pizza-db.ctxrmmyk7pss.us-east-1.rds.amazonaws.com;Database=pizza-db;User Id=admin;Password=SA4oanUnvnDtHadZg1B6;"
+    "ProdDb": "Server=pizza-db.ctxrmmyk7pss.us-east-1.rds.amazonaws.com;Database=pizza-db;User Id=admin;Password=SA4oanUnvnDtHadZg1B6;",
+    "DevDb": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=DevDb;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
