Toppings now associate correctly with pizzas and update

--- a/LocalPizza/appsettings.json
+++ b/LocalPizza/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "ProdDb": "Server=pizza-db.ctxrmmyk7pss.us-east-1.rds.amazonaws.com;Database=pizza-db;User Id=admin;Password=SA4oanUnvnDtHadZg1B6;",
-    "DevDb": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=DevDb;Integrated Security=True;"
+    "DevDb": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=pizza-db;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
