--- a/LocalPizza/LocalPizza.csproj
+++ b/LocalPizza/LocalPizza.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0" />
+    <PackageReference Include="NodaTime" Version="3.0.3" />
   </ItemGroup>
 
 	<ItemGroup>
