Order gets created in the database and the relationships work correctly.

--- a/LocalPizza/LocalPizza.csproj
+++ b/LocalPizza/LocalPizza.csproj
@@ -23,4 +23,8 @@
 		<ProjectReference Include="..\LocalPizza.Data\LocalPizza.Data.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="wwwroot\js\Order\" />
+	</ItemGroup>
+
 </Project>
