scrubbed secret keys from commit

--- a/LocalPizza/appsettings.json
+++ b/LocalPizza/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ProdDb": "Server=pizza-db.ctxrmmyk7pss.us-east-1.rds.amazonaws.com;Database=pizza-db;User Id=admin;Password=SA4oanUnvnDtHadZg1B6;",
+    "ProdDb": "Your secret connection string here",
     "DevDb": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=pizza-db;Integrated Security=True;"
   },
   "Logging": {
